--- a/pages/settings/settingspage.ui
+++ b/pages/settings/settingspage.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>SettingsPage</class>
- <widget class="QOpenGLWidget" name="SettingsPage">
+ <widget class="QWidget" name="SettingsPage">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -179,38 +179,6 @@
                 <property name="spacing">
                  <number>6</number>
                 </property>
-                <item row="1" column="1">
-                 <layout class="QVBoxLayout" name="buttonLayout"/>
-                </item>
-                <item row="2" column="1">
-                 <spacer name="verticalSpacer_2">
-                  <property name="orientation">
-                   <enum>Qt::Orientation::Vertical</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>20</width>
-                    <height>40</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
-                <item row="0" column="1">
-                 <spacer name="verticalSpacer">
-                  <property name="orientation">
-                   <enum>Qt::Orientation::Vertical</enum>
-                  </property>
-                  <property name="sizeType">
-                   <enum>QSizePolicy::Policy::Expanding</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>20</width>
-                    <height>40</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
                 <item row="0" column="0" rowspan="3">
                  <layout class="QVBoxLayout" name="printerListLayout">
                   <property name="spacing">
