--- a/pages/settings/theme/themesettingspage.ui
+++ b/pages/settings/theme/themesettingspage.ui
@@ -61,7 +61,7 @@
         <x>0</x>
         <y>0</y>
         <width>973</width>
-        <height>1648</height>
+        <height>1655</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_9">
@@ -335,6 +335,12 @@
           </item>
           <item row="0" column="2">
            <widget class="QToolButton" name="copyThemeButton">
+            <property name="minimumSize">
+             <size>
+              <width>36</width>
+              <height>36</height>
+             </size>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
@@ -351,6 +357,12 @@
            <widget class="QToolButton" name="deleteThemeButton">
             <property name="enabled">
              <bool>false</bool>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>36</width>
+              <height>36</height>
+             </size>
             </property>
             <property name="text">
              <string>...</string>
