--- a/pages/settings/edit_printer/editprinterdialog.ui
+++ b/pages/settings/edit_printer/editprinterdialog.ui
@@ -18,13 +18,6 @@
     <normaloff>:/images/flo_beta.png</normaloff>:/images/flo_beta.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="windowTitleLabel">
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
@@ -35,6 +28,41 @@
        <string>Printer</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="0" colspan="3">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Name</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Instance Location</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>Port</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>API Key</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0" colspan="3">
+        <widget class="QLabel" name="label_8">
+         <property name="text">
+          <string>Host Address</string>
+         </property>
+        </widget>
+       </item>
        <item row="15" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
@@ -48,19 +76,6 @@
          </property>
         </spacer>
        </item>
-       <item row="0" column="0" colspan="3">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Name</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0" colspan="2">
-        <widget class="QLineEdit" name="printerInstanceLocationEdit"/>
-       </item>
-       <item row="1" column="0" colspan="3">
-        <widget class="QLineEdit" name="printerNameEdit"/>
-       </item>
        <item row="3" column="0">
         <widget class="QLineEdit" name="addressLineEdit">
          <property name="text">
@@ -68,7 +83,23 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="2">
+       <item row="5" column="0" colspan="3">
+        <widget class="QLineEdit" name="printerInstanceLocationEdit"/>
+       </item>
+       <item row="5" column="3">
+        <widget class="QToolButton" name="printerBrowseFilesButton">
+         <property name="minimumSize">
+          <size>
+           <width>35</width>
+           <height>35</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="2" colspan="2">
         <widget class="QSpinBox" name="portSpinBox">
          <property name="minimumSize">
           <size>
@@ -84,56 +115,24 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>API Key</string>
-         </property>
-        </widget>
+       <item row="1" column="0" colspan="4">
+        <widget class="QLineEdit" name="printerNameEdit"/>
        </item>
-       <item row="5" column="2">
-        <widget class="QToolButton" name="printerBrowseFilesButton">
-         <property name="text">
-          <string>...</string>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="0" colspan="3">
+       <item row="8" column="0" colspan="4">
         <widget class="QLineEdit" name="printerKeyEdit">
          <property name="enabled">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>Instance Location</string>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="0" colspan="3">
+       <item row="10" column="0" colspan="4">
         <widget class="QCheckBox" name="printerDefaultPrinterCheckBox">
          <property name="text">
           <string>Default Printer</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
-        <widget class="QLabel" name="label_9">
-         <property name="text">
-          <string>Port</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0" colspan="3">
-        <widget class="QLabel" name="label_8">
-         <property name="text">
-          <string>Host Address</string>
-         </property>
-        </widget>
-       </item>
-       <item row="9" column="0">
+       <item row="9" column="0" colspan="4">
         <widget class="QCheckBox" name="printerAutoConnectCheckBox">
          <property name="text">
           <string>Auto Connect</string>
@@ -364,6 +363,12 @@
          </item>
          <item>
           <widget class="QToolButton" name="colorPickerButton">
+           <property name="minimumSize">
+            <size>
+             <width>35</width>
+             <height>35</height>
+            </size>
+           </property>
            <property name="text">
             <string>...</string>
            </property>
@@ -373,8 +378,14 @@
           <widget class="QLabel" name="colorDisplayLabel">
            <property name="minimumSize">
             <size>
-             <width>30</width>
-             <height>0</height>
+             <width>35</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>35</width>
+             <height>35</height>
             </size>
            </property>
            <property name="text">
@@ -474,6 +485,13 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="windowTitleLabel">
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
